[package]
name = "leetup"
version = "0.1.0"
authors = ["dragfire <asem.devajit@gmail.com>"]
edition = "2018"
description = "Leetcode cli"

[dependencies]
cache = { path = "./cache" }
clap = "2.33.1"
structopt = "0.3.15"
reqwest = { version = "0.10.6", features = ["blocking", "json", "cookies"] }
thiserror = "1.0.20"
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
ansi_term = "0.12.1"
serde_json = "1.0.55"
regex = "1.3.9"
rpassword = "4.0.5"
url = "2.1.1"
curl = "0.4.30"
cookie = "0.14.1"
