[package]
name = "leetup"
version = "1.2.3"
authors = ["dragfire <asem.devajit@gmail.com>"]
edition = "2018"
description = "Leetcode cli"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dragfire/leetup"
repository = "https://github.com/dragfire/leetup"
keywords = ["cli", "leetcode"]
categories = ["command-line-utilities"]
exclude = [
  "assets/*"
]

[dependencies]
leetup-cache = { path = "./cache", version = "0.1.0"}
clap = "2.33.1"
structopt = "0.3.15"
thiserror = "1.0.20"
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
ansi_term = "0.12.1"
regex = "1.3.9"
url = "2.1.1"
cookie = "0.17.0"
colci = "0.1.0"
log = "0.4.11"
env_logger = "0.10.0"
html2text = "0.6.0"
spinners = "1.2.0"
dirs = "5.0.1"
serde_repr = "0.1.6"
shellexpand = "3.1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"

[dev-dependencies]
tempfile = "3.1.0"
predicates = "1.0.5"
assert_cmd = "2.0.12"
strip-ansi-escapes = "0.2.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
