[package]
name = "cache"
version = "0.1.0"
authors = ["dragfire <asem.devajit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
