[package]
name = "leetup_cache"
version = "0.1.0"
authors = ["dragfire <asem.devajit@gmail.com>"]
edition = "2018"
description = "Cache"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dragfire/leetup"
repository = "https://github.com/dragfire/leetup"
keywords = ["cli", "leetcode"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
